--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": " jest"
   },
@@ -23,6 +24,7 @@
     "babel-preset-react": "^7.0.0-beta.3",
     "bootstrap": "3",
     "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "3.0.0",
     "jest": "^24.8.0",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
