--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": " jest",
-    "start":"node server/server.js",
-    "heroku-postbuild":"yarn run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@babel/cli": "^7.5.5",
@@ -47,6 +47,9 @@
     "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "3.1.0",
+    "webpack-dev-server": "2.5.1"
+  },
+  "devDependencies": {
     "webpack-dev-server": "2.5.1"
   }
 }
